--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ dependencies:
 
 dev_dependencies:
   build_runner:
-  json_serializable:
+  json_serializable: ^5.0.1
   freezed: ^0.14.5
   flutter_test:
     sdk: flutter
