--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,7 @@ dependencies:
 dev_dependencies:
   build_runner:
   json_serializable: ^5.0.1
+  meta: ^1.4.0
   freezed: ^0.14.5
   flutter_test:
     sdk: flutter
