--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,11 +1,11 @@
 name: scribble
 description: Scribble is a lightweight library for freehand drawing in Flutter supporting pressure, variable line width and more!
-version: 0.0.2
+version: 0.0.3
 repository: https://github.com/timcreatedit/scribble
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
-  flutter: ">=1.17.0"
+  flutter: ">=2.3.0"
 
 dependencies:
   flutter:
@@ -17,9 +17,8 @@ dependencies:
   kimchi: ^0.0.9
 
 dev_dependencies:
-  build_runner:
+  build_runner: ^2.1.2
   json_serializable: ^5.0.1
-  meta: ^1.4.0
   freezed: ^0.14.5
   flutter_test:
     sdk: flutter
