--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,8 @@ environment:
   sdk: ">=2.12.0 <3.0.0"
   flutter: ">=2.2.3"
 
+dependency_overrides:
+  meta: 1.4.0
 dependencies:
   flutter:
     sdk: flutter
