--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,6 +13,7 @@ dependencies:
   collection: ^1.15.0
   vector_math: ^2.1.0
   freezed_annotation: ^0.14.3
+  state_notifier: ^0.7.1
   flutter_state_notifier: ^0.7.1
   kimchi: ^0.0.9
 
