--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,12 +10,10 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  collection: ^1.15.0
   vector_math: ^2.1.0
   freezed_annotation: ^0.14.3
-  state_notifier: ^0.7.1
   flutter_state_notifier: ^0.7.1
-  kimchi: ^0.0.9
+  history_state_notifier: ^0.0.2
 
 dev_dependencies:
   build_runner: ^2.1.2
