--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,7 @@ dependencies:
     sdk: flutter
   vector_math: ^2.1.0
   freezed_annotation: ^0.14.3
+  state_notifier: ^0.7.1
   flutter_state_notifier: ^0.7.1
   history_state_notifier: ^0.0.2
 
