--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,15 +11,15 @@ dependencies:
   flutter:
     sdk: flutter
   vector_math: ^2.1.0
-  freezed_annotation: ^0.14.3
+  freezed_annotation: ^0.15.0
   state_notifier: ^0.7.1
   flutter_state_notifier: ^0.7.1
-  history_state_notifier: ^0.0.2
+  history_state_notifier: ^0.0.4
 
 dev_dependencies:
   build_runner: ^2.1.2
-  json_serializable: ^5.0.1
-  freezed: ^0.14.5
+  json_serializable: ^5.0.2
+  freezed: ^0.15.0+1
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
