--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,9 +17,10 @@ dependencies:
   history_state_notifier: ^0.0.4
 
 dev_dependencies:
-  build_runner: ^2.1.2
-  json_serializable: ^5.0.2
-  freezed: ^0.15.0+1
+  build_runner: ^2.1.5
+  json_annotation: ^4.3.0
+  json_serializable: ^6.0.1
+  freezed: ^0.15.1+1
   flutter_test:
     sdk: flutter
   flutter_lints: ^1.0.0
