--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: scribble
 description: Scribble is a lightweight library for freehand drawing in Flutter supporting pressure, variable line width and more!
-version: 0.2.1
+version: 0.2.2
 repository: https://github.com/timcreatedit/scribble
 
 environment:
@@ -10,19 +10,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  vector_math: ^2.1.0
-  freezed_annotation: ^0.15.0
+  vector_math: ^2.1.1
+  freezed_annotation: ^1.1.0
   state_notifier: ^0.7.1
   flutter_state_notifier: ^0.7.1
   history_state_notifier: ^0.0.4
 
 dev_dependencies:
-  build_runner: ^2.1.5
-  json_serializable: ^5.0.2
-  freezed: ^0.15.1+1
+  build_runner: ^2.1.7
+  json_serializable: ^6.1.3
+  freezed: ^1.1.1
   flutter_test:
     sdk: flutter
-  flutter_lints: ^1.0.0
+  flutter_lints: ^1.0.4
 
 # The following section is specific to Flutter.
 flutter:
