--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: scribble
 description: Scribble is a lightweight library for freehand drawing in Flutter supporting pressure, variable line width and more!
-version: 0.2.2
+version: 0.3.0
 repository: https://github.com/timcreatedit/scribble
 
 environment:
@@ -10,15 +10,15 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  vector_math: ^2.1.1
+  vector_math: ^2.1.2
   freezed_annotation: ^1.1.0
-  state_notifier: ^0.7.1
+  state_notifier: ^0.7.2+1
   flutter_state_notifier: ^0.7.1
-  history_state_notifier: ^0.0.4
+  history_state_notifier: ^0.0.5
 
 dev_dependencies:
-  build_runner: ^2.1.7
-  json_serializable: ^6.1.3
+  build_runner: ^2.1.8
+  json_serializable: ^6.1.5
   freezed: ^1.1.1
   flutter_test:
     sdk: flutter
