--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,5 @@
 name: scribble
-description: Scribble is a lightweight library for freehand drawing in Flutter
-  supporting pressure, variable line width and more!
+description: Scribble is a lightweight library for freehand drawing in Flutter supporting pressure, variable line width and more!
 version: 0.3.1
 repository: https://github.com/timcreatedit/scribble
 
@@ -11,19 +10,19 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_state_notifier: ^0.7.1
-  freezed_annotation: ^2.0.3
-  history_state_notifier: ^0.0.5
-  state_notifier: ^0.7.2+1
   vector_math: ^2.1.1
+  freezed_annotation: ^1.1.0
+  state_notifier: ^0.7.2+1
+  flutter_state_notifier: ^0.7.1
+  history_state_notifier: ^0.0.5
 
 dev_dependencies:
   build_runner: ^2.1.8
-  flutter_lints: ^1.0.4
+  json_serializable: ^6.1.5
+  freezed: ^1.1.1
   flutter_test:
     sdk: flutter
-  freezed: ^2.0.3
-  json_serializable: ^6.1.5
+  flutter_lints: ^1.0.4
 
 # The following section is specific to Flutter.
-flutter: null
+flutter:
