chore(value_notifier_tools): prepare pubspec.yaml for release

--- a/packages/value_notifier_tools/pubspec.yaml
+++ b/packages/value_notifier_tools/pubspec.yaml
@@ -1,7 +1,8 @@
 name: value_notifier_tools
 description: Helpful lightweight tools for working with ValueNotifiers
 version: 0.1.0+1
-
+repository: https://github.com/timcreatedit/scribble/tree/main/packages/value_notifier_tools
+homepage: https://whynotmake.it
 
 environment:
   sdk: ">=3.0.0 <4.0.0"
