--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,8 +12,7 @@ dependencies:
     sdk: flutter
   freezed_annotation: ^2.4.1
   perfect_freehand: ^2.3.2
-  value_notifier_tools: 
-    path: ./packages/value_notifier_tools
+  value_notifier_tools: ^0.1.1
 
 dev_dependencies:
   build_runner: ^2.4.9
