--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "conventionalCommits.scopes": [
         "value_notifier_tools",
-        "melos"
+        "melos",
+        "example"
     ]
 }
