chore(release): publish packages
 - simpli@0.1.1

--- a/packages/simpli/pubspec.yaml
+++ b/packages/simpli/pubspec.yaml
@@ -1,6 +1,6 @@
 name: simpli
 description: Polyline simplification algorithms, made simple! Sporting Ramer-Douglas-Peucker and Visvalingam
-version: 0.1.0+1
+version: 0.1.1
 
 
 environment:
