--- a/packages/simpli/pubspec.yaml
+++ b/packages/simpli/pubspec.yaml
@@ -1,6 +1,8 @@
 name: simpli
 description: Polyline simplification algorithms, made simple! Sporting Ramer-Douglas-Peucker and Visvalingam
 version: 0.1.1
+repository: https://github.com/timcreatedit/scribble/tree/main/packages/simpli
+homepage: https://whynotmake.it
 
 
 environment:
