--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  freezed_annotation: ^2.4.1
+  freezed_annotation: ">=2.4.1 <3.0.0"
   perfect_freehand: ^2.3.2
   simpli: ^0.1.1
   value_notifier_tools: ^0.1.2
@@ -22,9 +22,9 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   freezed: ^2.4.7
-  json_serializable: ^6.7.1
-  lintervention: ^0.1.1
-  melos: ">=5.2.1 <7.0.0"
+  json_serializable: ^6.9.5
+  lintervention: ^0.3.1
+  melos: ^6.3.3
   mocktail: ^1.0.3
 
 flutter:
